Fix spacing after default header, correct line height in dropdown menus

--- a/wp-content/themes/website-weekend-la/style.css
+++ b/wp-content/themes/website-weekend-la/style.css
@@ -13,14 +13,14 @@ Template: organic-profile
     margin: 0 auto !important;
     padding: 0 !important;
 	}
-	
+
 .page-id-69 .row {
 	width: 100%;
 	max-width: 100%;
 	margin: 0 auto;
 	min-width: 0;
 	}
-	
+
 .page-id-69 h1.headline {
 	display: none;
 	}
@@ -49,3 +49,11 @@ Template: organic-profile
     display: block;
 }
 
+.headline {
+	padding-top: 2rem;
+}
+
+.menu li li a {
+	line-height: 1.2;
+	padding: 0 0 1rem 0;
+}
